--- a/views/store/index.ejs
+++ b/views/store/index.ejs
@@ -4,7 +4,7 @@
 <%- include('../partials/nav') %>
   <main class="container mx-auto bg-white shadow-lg rounded-lg p-8 mt-10 max-w-xxl">
     <h2 class="text-3xl text-red-500 font-bold text-center mb-6">
-      Welcome to airbnb index page
+      Welcome to staySphere index page
     </h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <% registeredHomes.forEach(home => { %>
